<resources>
    <string name="app_name">Los Santos Weekly Slammer</string>
    <string name="app_abbr">L.S.W.S</string>
    <string name="twn_abbr">This Week\'s News</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">What’s going on in Los Santos? Don’t worry we have the inside scoop.
        Need a few new employees? We got the right people for you. Looking for work? We got jobs
        ready for you.</string>
    <string name="theV">V</string>
    <string name="rank">Rank: </string>
    <string name="name">Name: </string>
    <string name="crew">Crew: </string>
    <string name="console">Console: </string>
    <string name="wanted">Wanted for: </string>
    <string name="special">Specialties: </string>
    <string name="fav">Favorite Weapon: </string>
    <string name="kills">Kills: </string>
    <string name="bank">Cash in the Bank: </string>
    <string name="work">Available for Work: </string>
    <string name="slammerw">You looking for someone that is not afraid to get their hands
        dirty? You came to the right place. Contact, hire, and get the job done. </string>
    <string name="contact">Hire</string>
    <string name="twnw">Read what has been going on in Los Santos. Check out some of the
        crews. Get the scoop on where the hottest events are going to be.</string>
    <string name="hwtxt">Looking for something to get in to? Need cash? Apply to jobs here.</string>
    <string name="jobD">Job Description:</string>
    <string name="rr">Required Rank:</string>
    <string name="rrwd">Get Paid:</string>
    <string name="rc">Console:</string>
    <string name="apply">Apply</string>
    <string name="crewTxt">Check out some amazing crews. If you are looking for a crew, this is the right place to find one.</string>
</resources>
